<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>algorithms-modules</artifactId>
    <name>algorithms-modules</name>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.baeldung</groupId>
        <artifactId>parent-modules</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <properties>
        <java.version>21</java.version>
        <commons-codec.version>1.16.0</commons-codec.version>
        <commons-math3.version>3.6.1</commons-math3.version>
        <cobertura.plugin.version>2.7</cobertura.plugin.version>
        <tradukisto.version>1.0.1</tradukisto.version>
    </properties>

    <modules>
        <module>algorithms-genetic</module>
        <module>algorithms-miscellaneous-1</module>
        <module>algorithms-miscellaneous-2</module>
        <module>algorithms-miscellaneous-3</module>
        <module>algorithms-miscellaneous-4</module>
        <module>algorithms-miscellaneous-5</module>
        <module>algorithms-miscellaneous-6</module>
        <module>algorithms-miscellaneous-7</module>
        <module>algorithms-miscellaneous-8</module>
        <module>algorithms-miscellaneous-9</module>
        <module>algorithms-searching</module>
        <module>algorithms-sorting</module>
        <module>algorithms-sorting-2</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
